Fix promo icon alignment and prevent text overlap

--- a/src/components/PromoBanner.css
+++ b/src/components/PromoBanner.css
@@ -137,7 +137,7 @@
     padding-right: 160px;
   }
   .promo-banner__art{
-    right: 12px;
+    right: 5px;
     width: 165px;
     height: 165px;
   }
